fix: database integration and migration for flyway

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=simple-banking-app-api
+
+spring.datasource.password=${DATABASE_PASSWORD}
+spring.datasource.url=${DATABASE_URL}
+spring.datasource.username=${DATABASE_USERNAME}
+
+spring.flyway.enabled=false
+spring.flyway.locations=classpath:db/migration
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
