fix(doc): put -> patch

--- a/doc/api.yml
+++ b/doc/api.yml
@@ -58,7 +58,7 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/User"
-    put:
+    patch:
       summary: Update user details
       operationId: updateUser
       parameters:
