fix(doc): rename transactions to balance

--- a/doc/api.yml
+++ b/doc/api.yml
@@ -105,9 +105,9 @@ components:
       properties:
         id:
           type: integer
-        transactions:
+        balance:
           type:
-            object
+            number
       allOf:
         - $ref: '#/components/schemas/UserCreate'
         - type: object
